@@ -2,6 +2,7 @@
 
 	* lisp/bbdb.el: Autoload `bbdb-insinuate-gnus' from bbdb-gnus.el
 	so `bbdb-initialize' won't throw an error when passed 'gnus.
+	Ditto 'message, 'rmail, 'vm, and 'mh-e.
 
 2011-10-17  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb.el (bbdb-name-format, bbdb-read-name-format)
